--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
-  
+  <footer>
+    <h3>Made By <a href="https://github.com/SharjeelDev/CSS-Variables-and-JS" target="_blank" title="Source Code" class='hl'>Sharjeel Yunus</a></h3>
+    <ul class="social-icon wow">
+      <li><a href="https://www.facebook.com/aslisharjeel" target="_blank" title="Like me on Facebook"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://www.instagram.com/sharjeel_arts/" target="_blank" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="https://twitter.com/sharjeelyunus" target="_blank" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="https://github.com/SharjeelDev" target="_blank" title="Follow me on GitHub"><i class="fa fa-github"></i></a></li>
+    </ul>
+  </footer>
 
   <script src="script.js"></script>
 </body>
